# veritas

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mcp_servers.example.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
example_run/: README.md
example_run/ollama_local/: evaluation_results.json
example_run/ollama_local/cardiac_01_dcm_lvef_lower/run_000/: experiment_config.json  workflow_config.json
example_run/or_gpt52/: evaluation_metrics.json  evaluation_results.json
experiments/: README.md  evaluate_experiment_folder.py  evaluation.py  run_experiments.py  tiered_hypothesis_bank.json
experiments/configs/: default_ollama_local.json  default_openrouter_gpt52.json
mcp_servers/code_execution/: code_execution_server.py  data_helpers.py  execution_engine.py  requirements.txt
mcp_servers/sat_segmentation/: __init__.py  requirements.txt  sat_server.py  sat_wrapper.py  structure_catalog.py
scripts/: generate_pdgm_manifest.py  setup_code_execution.sh  setup_sat.sh
src/bio_api/: __init__.py  base.py  registry.py
src/bio_api/domains/: __init__.py  sat.py  utils.py
src/veritas/: __about__.py  __init__.py  agent.py  config.py  constants.py  data_paths.py  graph_state.py  graph_utils.py  langchain_utils.py  prompt_templates.py  prompts.py  tool_binding.py  tools.py  verbosity.py
src/veritas/graph/: __init__.py  code_execution.py  nodes.py  routing.py  tool_execution.py  utils.py
src/veritas/langgraph/: __init__.py  individual.py  team.py
src/veritas/mcp/: __init__.py  client.py  config.py  tools.py
src/veritas/meetings/: __init__.py  langgraph.py  router.py  validation.py
src/veritas/utils/: __init__.py  discussion.py  io.py  model_detection.py  schema_conversion.py  tokens.py
src/veritas/vision/: __init__.py  base.py  gt_populator.py  results_db.py  segmentation_executor.py  utils.py
src/veritas/workflow/: README.md  audit.py  runner.py
tests/: README.md
(+60 files in other folders)
